--- a/views/js.html
+++ b/views/js.html
@@ -1,3 +1,4 @@
 <script src="/views/assets/js/jquery.min.js" type="text/javascript"></script>
 <!-- <script src="/views/assets/js/bootstrap.min.js"></script> -->
+<script src="/views/assets/js/app.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script>
