Rewrote welcome message

--- a/views/login.html
+++ b/views/login.html
@@ -10,10 +10,6 @@
 		</div>
 		<div class="row">
 			<div class="col-lg-6" style="">
-				<div class="alert alert-info" style="">
-					<h4>Welcome!</h4>
-					Using this control panel, you can submit problems, clarifications and more. Please be familiar with the rules. All activity is being logged, and anti-tamper systems are in place. Please do not put us in a situation where you/your team would be disqualified. 
-				</div>
 				<div class="well section" style="">
 					<form method="post" accept-charset="utf-8">
 						<fieldset class="signup-container" >
@@ -22,6 +18,10 @@
 							<button type="submit" class="btn btn-block btn-success" id="sign" tabindex="5" style="height:40px;" data-loading-text="Signing In...">Sign In</button>
 						</fieldset>
 					</form>
+				</div>
+				<div class="alert alert-info" style="">
+					<h4>Welcome!</h4>
+					This control panel can be used to submit problems, clarifications, and more. By registering, you agree to abide by all of the contest rules. All activity is being logged, and anti-tamper systems are in place. Please do not put us in a situation where your team would be disqualified. If you are ordering pizza, make sure to do so before the contest starts. To ensure that you do not experience any problems with the web control panel, use a modern, standards-compliant web browser such as Google Chrome or Mozilla Firefox, and make sure JavaScript is enabled. If you need help, raise your hand; someone will come to assist you. 
 				</div>
 			</div>
 			<!-- <div style="width:350px;font-size:18px;margin:0 auto; text-align:center; margin-bottom: 20px;color:rgba(0,0,0,0.6);text-shadow:0 1px rgba(255,255,255,0.4); font-weight: bold;">- or -</div> -->
