Added compilation service.
Test compilation via /api/compile.

--- a/views/login.html
+++ b/views/login.html
@@ -19,6 +19,7 @@
 		<div class="row">
 			<div class="col-lg-6" style="">
 				<div class="well section" style="">
+					<h5>Log In</h5>
 					<form method="post" accept-charset="utf-8">
 						<fieldset class="signup-container" >
 							<div class="form-group"><input type="text" name="teamnumber" class="form-control" placeholder="Team Number" tabindex="1"></div>
@@ -30,7 +31,8 @@
 			</div>
 			<!-- <div style="width:350px;font-size:18px;margin:0 auto; text-align:center; margin-bottom: 20px;color:rgba(0,0,0,0.6);text-shadow:0 1px rgba(255,255,255,0.4); font-weight: bold;">- or -</div> -->
 			<div class="col-lg-6" style="">
-				<div class="well section" style="	">
+				<div class="well section" style="">
+					<h5>Register</h5>
 					<form method="post" accept-charset="utf-8">
 						<fieldset class="signup-container" >
 							<div class="form-group"><input type="text" name="teamnumber" placeholder="Team Number" tabindex="1" class="form-control"></div>
