--- a/views/js.html
+++ b/views/js.html
@@ -1,4 +1,12 @@
 <script src="/views/assets/js/jquery.min.js" type="text/javascript"></script>
 <!-- <script src="/views/assets/js/bootstrap.min.js"></script> -->
-<script src="/views/assets/js/app.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script>
+<script src="http://twitter.github.io/bootstrap/assets/js/google-code-prettify/prettify.js"></script>
+<script src="/views/assets/js/app.js"></script>
+<script>
+!function ($) {
+    $(function(){
+    	window.prettyPrint && prettyPrint()
+    })
+}(window.jQuery)
+</script>
