--- a/views/login.html
+++ b/views/login.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 	<div class="container" style="width:825px; margin:0 auto;">
-		<div class="span10">
+		<div class="col-lg-12">
 			<div style='margin:0 auto;background:url("/views/assets/images/taylor_logo_small.png") no-repeat;width: 144px;height:128px;margin-bottom:20px;'></div>
 			<div style="width:350px;font-size:18px;margin:0 auto; text-align:center; margin-bottom: 20px;color:rgba(0,0,0,0.6);text-shadow:0 1px rgba(255,255,255,0.4); font-weight: bold;"><?=contest_name?></div>
 		</div>
@@ -19,7 +19,7 @@
 		<div class="row">
 			<div class="col-lg-6" style="">
 				<div class="well section" style="">
-					<h5>Log In</h5>
+					<legend>Log In</legend>
 					<form method="post" accept-charset="utf-8">
 						<fieldset class="signup-container" >
 							<div class="form-group"><input type="text" name="teamnumber" class="form-control" placeholder="Team Number" tabindex="1"></div>
@@ -32,7 +32,7 @@
 			<!-- <div style="width:350px;font-size:18px;margin:0 auto; text-align:center; margin-bottom: 20px;color:rgba(0,0,0,0.6);text-shadow:0 1px rgba(255,255,255,0.4); font-weight: bold;">- or -</div> -->
 			<div class="col-lg-6" style="">
 				<div class="well section" style="">
-					<h5>Register</h5>
+					<legend>Register</legend>
 					<form method="post" accept-charset="utf-8">
 						<fieldset class="signup-container" >
 							<div class="form-group"><input type="text" name="teamnumber" placeholder="Team Number" tabindex="1" class="form-control"></div>
