Check user-agent string to not allow IE, check to see if javascript is on

--- a/views/js.html
+++ b/views/js.html
@@ -9,4 +9,12 @@
     	window.prettyPrint && prettyPrint()
     })
 }(window.jQuery)
+
+
+var badBrowsers = /;MSIE .*;/i;
+if (badBrowsers.test(navigator.userAgent)){
+	$(".container").append('<div class=\"noscriptmsg\">You don\'t have javascript enabled.  Good luck with that.</div>');
+	$(".container").remove();
+}
+
 </script>
