--- a/views/login.html
+++ b/views/login.html
@@ -3,6 +3,14 @@
 <?php require_once "head.html"; ?>	
 </head>
 <body>
+	<noscript>
+    	<style type="text/css">
+    	    .container {display:none;}
+    	</style>
+    	<div class="noscriptmsg">
+    		You don't have javascript enabled.  Good luck with that.
+    	</div>
+	</noscript>
 	<div class="container" style="width:825px; margin:0 auto;">
 		<div class="col-lg-12">
 			<div style='margin:0 auto;background:url("/views/assets/images/taylor_logo_small.png") no-repeat;width: 144px;height:128px;margin-bottom:20px;'></div>
