--- a/views/compile_temp.html
+++ b/views/compile_temp.html
@@ -16,6 +16,14 @@
 						<pre id="byte_content" class="prettyprint linenums" style="display:none;"></pre>
 						<div id="output_container" style="display:none;">
 							<legend>Results</legend>
+							<div class="alert alert-success" id="compile_success_alert" style="display:none">
+								<button type="button" class="close" data-dismiss="alert">&times;</button>
+								<strong>Success!</strong>
+							</div>
+							<div class="alert alert-danger" id="compile_danger_alert" style="display:none">
+								<button type="button" class="close" data-dismiss="alert">&times;</button>
+								<strong>Error!</strong>
+							</div>
 							<pre id="output" class="prettyprint linenums"></pre>
 						</div>
 						<fieldset class="form-container" >
@@ -23,6 +31,7 @@
 							<textarea name="code" id="code" cols="30" rows="10" style="display:none"></textarea>
 							<button type="button" class="btn btn-block btn-default" id="upload" tabindex="5" style="" data-loading-text="Uploading...">Upload</button>
 							<button type="button" class="btn btn-block btn-success" id="compile" tabindex="5" style="display:none" data-loading-text="Judging...">Judge</button>
+							<button type="button" class="btn btn-block btn-primary" id="resubmit" tabindex="5" style="display:none" data-loading-text="Resubmitting..." onClick="window.location.reload()">Resubmit</button>
 						</fieldset>
 					</form>
 				</div>
