Fixed more issues with Firefox caching and made some visual changes

--- a/views/compile_temp.html
+++ b/views/compile_temp.html
@@ -24,7 +24,7 @@
 								<button type="button" class="close" data-dismiss="alert">&times;</button>
 								<strong>Error!</strong>
 							</div>
-							<legend></legend>
+							<legend id="error_divider"></legend>
 							<pre id="output" class="prettyprint linenums"></pre>
 						</div>
 						<fieldset class="form-container" >
