Changed logo, made visual changes.

--- a/views/login.html
+++ b/views/login.html
@@ -18,7 +18,7 @@
 		</div>
 		<div class="row">
 			<div class="col-lg-12">
-				<div class="alert alert-info" style="">
+				<div class="alert alert-success" style="">
 					<h4>Welcome!</h4>
 					This control panel can be used to submit problems, clarifications, and more. By registering, you agree to abide by all of the contest rules. All activity is being logged, and anti-tamper systems are in place. Please do not put us in a situation where your team would be disqualified. If you are ordering pizza, make sure to do so before the contest starts. To ensure that you do not experience any problems with the web control panel, use a modern, standards-compliant web browser such as Google Chrome or Mozilla Firefox, and make sure JavaScript is enabled. If you need help, raise your hand; someone will come to assist you. 
 				</div>
