--- a/views/compile_temp.html
+++ b/views/compile_temp.html
@@ -5,7 +5,7 @@
 <body>
 	<div class="container" style="width:825px; margin:0 auto;">
 		<div class="col-lg-12">
-			<div style='margin:0 auto;background:url("/views/assets/images/taylor_logo_small.png") no-repeat;width: 144px;height:128px;margin-bottom:20px;'></div>
+			<div onClick="window.location = '/';" style='margin:0 auto;background:url("/views/assets/images/taylor_logo_small.png") no-repeat;width: 144px;height:128px;margin-bottom:20px;cursor:pointer'></div>
 			<div style="width:350px;font-size:18px;margin:0 auto; text-align:center; margin-bottom: 20px;color:rgba(0,0,0,0.6);text-shadow:0 1px rgba(255,255,255,0.4); font-weight: bold;"><?=contest_name?></div>
 		</div>
 		<div class="row">
