Hid the footer for now.

--- a/views/js.html
+++ b/views/js.html
@@ -1,6 +1,5 @@
 <!-- <script src="/views/assets/js/bootstrap.min.js"></script> -->
-<div style="margin:0 auto;width:960px;text-align:center;color:rgba(0,0,0,0.5);font-size:11px"><a href="https://github.com/anst/thscs-panel" style="color:rgba(0,0,0,0.5);text-decoration:none">Created by Andy Sturzu. Contributions by Chufan Liang &amp; Jonathan Zong.</a></div>
-<script src="/views/assets/js/jquery.min.js" type="text/javascript"></script>
+<!-- <div style="margin:0 auto;width:960px;text-align:center;color:rgba(0,0,0,0.5);font-size:11px"><a href="https://github.com/anst/thscs-panel" style="color:rgba(0,0,0,0.5);text-decoration:none">Created by Andy Sturzu. Contributions by Chufan Liang &amp; Jonathan Zong.</a></div>--><script src="/views/assets/js/jquery.min.js" type="text/javascript"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script>
 <script src="http://twitter.github.io/bootstrap/assets/js/google-code-prettify/prettify.js"></script>
 <script src="/views/assets/js/app.js"></script>
