--- a/views/assets/css/app.css
+++ b/views/assets/css/app.css
@@ -3,6 +3,9 @@ body {
 	background-color: #f1f1f1;
 	padding:20px;
 }
+body.home {
+	background-color: #e5e5e5;
+}
 ::selection {
 	background: rgba(0,140,248,0.8);
 	color:white;
@@ -28,4 +31,7 @@ textarea:focus, select:focus, input[type="text"]:focus, input[type="password"]:f
 	outline: thin dotted \9 !important;
 	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 2px rgba(82,168,236,1) !important;
 	box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 2px rgba(82,168,236,1) !important;
+}
+#preview_problems td {
+ border:1px solid rgba(0,0,0,0.15) !important;
 }
