--- a/views/home.html
+++ b/views/home.html
@@ -2,7 +2,7 @@
 <head>
 <?php require_once "head.html"; ?>	
 </head>
-<body>
+<body class="home">
 	<noscript>
     	<style type="text/css">
     	    .container {display:none;}
@@ -12,71 +12,112 @@
     	</div>
 	</noscript>
 	<div class="container">
-		<div class="col-lg-12">
-			<div onClick="window.location = '/';" style='margin:0 auto;background:url("/views/assets/images/taylor_logo_small.png") no-repeat;width: 144px;height:128px;margin-bottom:20px;cursor:pointer'></div>
-			<div style="width:350px;font-size:18px;margin:0 auto; text-align:center; margin-bottom: 20px;color:rgba(0,0,0,0.6);text-shadow:0 1px rgba(255,255,255,0.4); font-weight: bold;"><?=contest_name?></div>
+		<div class="navbar" style="background:#f7f7f7 !important">
+			<a class="navbar-brand" href="#">THSCS 2013</a>
+			<ul class="nav navbar-nav">
+				<li class="active"><a href="#">Home</a></li>
+				<li><a href="#">Submit</a></li>
+				<li><a href="#">Scoreboard</a></li>
+			</ul>
 		</div>
 		<div class="row">
-			<div class="col-lg-12">
-				<div class="alert alert-success" style="">
-					<h4>Welcome!</h4>
-					This control panel can be used to submit problems, clarifications, and more. By registering, you agree to abide by all of the contest rules. All activity is being logged, and anti-tamper systems are in place. Please do not put us in a situation where your team would be disqualified. If you are ordering pizza, make sure to do so before the contest starts. To ensure that you do not experience any problems with the web control panel, use a modern, standards-compliant web browser such as Google Chrome or Mozilla Firefox, and make sure JavaScript is enabled. If you need help, raise your hand; someone will come to assist you. 
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-6" style="">
+			<div class="col-lg-12" style="">
 				<div class="well section" style="">
-					<legend>Log In</legend>
-					<form method="post" accept-charset="utf-8">
-						<fieldset class="signup-container" >
-							<div class="form-group"><input type="text" name="teamnumber" class="form-control" placeholder="Team Number" tabindex="1"></div>
-							<div class="form-group"><input type="password" name="password" class="form-control" placeholder="Password" tabindex="1"></div>
-							<div class="form-group"><legend></legend></div>
-							<button type="submit" class="btn btn-block btn-success" id="sign" tabindex="5" style="height:40px;" data-loading-text="Signing In...">Sign In</button>
-						</fieldset>
-					</form>
-				</div>
-			</div>
-			<!-- <div style="width:350px;font-size:18px;margin:0 auto; text-align:center; margin-bottom: 20px;color:rgba(0,0,0,0.6);text-shadow:0 1px rgba(255,255,255,0.4); font-weight: bold;">- or -</div> -->
-			<div class="col-lg-6" style="">
-				<div class="well section" style="">
-					<legend>Register</legend>
-					<form method="post" accept-charset="utf-8">
-						<fieldset class="signup-container" >
-							<div class="form-group"><input type="text" name="teamnumber" placeholder="Team Number" tabindex="1" class="form-control"></div>
-							<div class="form-group"><input type="password" name="password" placeholder="Password" tabindex="1" class="form-control"></div>
-							<div class="form-group"><legend></legend></div>
-							<div class="btn-group" data-toggle="buttons" style="margin-bottom: 15px;width:100%;">			
-								<label class="btn btn-success" style="width:50%;height:40px;">
-									<input type="radio" name="options" id="novice"> Novice
-								</label>
-								<label class="btn btn-success" style="width:50%;height:40px;">
-									<input type="radio" name="options" id="advanced"> Advanced
-								</label>
+					<div class="row">
+						<div class="col-lg-7"  style="border-right:1px solid #d1d1d1">
+							<legend>Team Info</legend>
+							<div class="form-group">
+								<input type="text" class="form-control" value="Taylor High School" disabled>
 							</div>
-							<div class="form-group"><legend></legend></div>
-							<div class="form-group"><select name="school" id="school" class="form-control">
-								<option value="null">School Name</option>
-								<option value="Cinco Ranch">Cinco Ranch</option>
-								<option value="Cy Woods">Cy Woods</option>
-								<option value="Seven Lakes">Seven Lakes</option>
-							</select></div>
-							<div class="form-group"><select name="team" id="team" class="form-control">
-								<option value="null">Number of Team Members</option>
-								<option value="1">1 Team Member</option>
-								<option value="2">2 Team Members</option>
-								<option value="3">3 Team Members</option>
-							</select></div>
-							<div class="form-group"><input type="text" name="member1" id="member1" placeholder="Member 1 Name" tabindex="1" class="form-control" style="display:none"></div>
-							<div class="form-group"><input type="text" name="member2" id="member2" placeholder="Member 2 Name" tabindex="1" class="form-control" style="display:none"></div>
-							<div class="form-group"><input type="text" name="member3" id="member3" placeholder="Member 3 Name" tabindex="1" class="form-control" style="display:none"></div>
-							<div class="form-group"><legend></legend></div>
-							<button type="submit" class="btn btn-block btn-success" id="sign" tabindex="5" style="height:40px;" data-loading-text="Signing Up...">Sign Up</button>
-						</fieldset>
-					</form>
+							<div class="form-group">
+								<input type="text" class="form-control" value="Advanced" disabled>
+							</div>
+							<div class="form-group">
+								<input type="text" class="form-control" value="Team Number 9000" disabled>
+							</div>
+							<div class="form-group">
+								<input type="text" class="form-control" value="Andy Sturzu">
+							</div>
+							<div class="form-group">
+								<input type="text" class="form-control" value="Chufan Liang">
+							</div>
+							<div class="form-group">
+								<input type="text" class="form-control" value="Jonathan Zong">
+							</div>
+							<div class="form-group">
+								<button class="btn btn-success btn-block">Submit</button>
+							</div>															
+						</div>
+						<div class="col-lg-5">
+							<legend>Problems</legend>
+							<table class="table table-bordered table-condensed" id="preview_problems">
+								<tr><td class="success">1.</td><td class="danger">11.</td></tr>
+								<tr><td class="warning">2.</td><td class="success">12.</td></tr>
+								<tr><td class="success">3.</td><td class="warning">13.</td></tr>
+								<tr><td class="danger">4.</td><td class="success">14.</td></tr>
+								<tr><td class="success">5.</td><td class="danger">15.</td></tr>
+								<tr><td class="warning">6.</td><td class="success">16.</td></tr>
+								<tr><td class="success">7.</td><td class="warning">17.</td></tr>
+								<tr><td class="success">8.</td><td class="success">18.</td></tr>
+								<tr><td class="danger">9.</td><td class="danger">19.</td></tr>
+								<tr><td class="success">10.</td><td class="danger">20.</td></tr>
+							</table>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-lg-7" style="padding-top:20px;border-top:1px solid #d1d1d1;border-right:1px solid #d1d1d1">
+							<legend>Written Scores</legend>
+							<table class="table table-bordered table-striped">
+								<tr><td>Andy</td><td>N/A</td></tr>
+								<tr><td>Chufan</td><td>N/A</td></tr>
+								<tr><td>Jonathan</td><td>240</td></tr>
+							</table>
+						</div>
+						<div class="col-lg-5">
+							<legend>Legend</legend>
+							<table class="table table-bordered table-condensed" id="preview_problems">
+								<tr><td class="success">Correct</td></tr>
+								<tr><td class="danger">Incorrect</td></tr>
+								<tr><td class="warning">No Submission</td></tr>
+							</table>
+						</div>
+					</div>
+				</div>
+			</div>
+			
+		</div>
+		<div class="row">
+			<div class="col-lg-1"></div>
+			<div class="col-lg-10" style="margin-top:-21px !important;">
+				<div class="well section" style="border-top-left-radius:0px !important;border-top-right-radius:0px !important;background:#eaeaea">
+					<div class="row">
+						<div class="col-lg-6">
+							<legend>Pizza</legend>
+							<div class="form-group">
+								<input type="text" class="form-control" placeholder="Cheese Pizza Count">
+							</div>
+							<div class="form-group">
+								<input type="text" class="form-control" placeholder="Sausage Pizza Count">
+							</div>
+							<div class="form-group">
+								<input type="text" class="form-control" placeholder="Pepperoni Pizza Count">
+							</div>
+							<div class="form-group">
+								<button class="btn btn-danger btn-block">Order</button>
+							</div>	
+						</div>
+						<div class="col-lg-6">
+							<legend>Help</legend>
+							<div class="alert alert-info" style="">
+								<h4>Welcome!</h4>
+								This control panel can be used to submit problems, clarifications, and more. By registering, you agree to abide by all of the contest rules. All activity is being logged, and anti-tamper systems are in place. Please do not put us in a situation where your team would be disqualified. If you are ordering pizza, make sure to do so before the contest starts. To ensure that you do not experience any problems with the web control panel, use a modern, standards-compliant web browser such as Google Chrome or Mozilla Firefox, and make sure JavaScript is enabled. If you need help, raise your hand; someone will come to assist you. 
+							</div>
+						</div>
+					</div>
+					
 				</div>	
-			</div>		
+			</div>
+			<div class="col-lg-1"></div>	
 		</div>
 	</div>
 <?php require_once "js.html"; ?>
