--- a/views/home.html
+++ b/views/home.html
@@ -1,17 +1,32 @@
 <html>
 <head>
-<?php require_once "head.html"; ?>	
+<?php require_once "head.html"; ?>
 </head>
 <body class="home">
 	<noscript>
     	<style type="text/css">
-    	    .container {display:none;}
+    	    .main {display:none;}
     	</style>
-    	<div class="noscriptmsg">
-    		You don't have javascript enabled.  Good luck with that.
+    	<div class="container noscriptmsg">
+    		<div class="noscriptinner">
+    			<div class="col-lg-12">
+    				<h1>Sorry!</h1>
+    				<p>Either your web brower does not have JavaScript turned on or your web browser does not support JavaScript. To ensure that you do not experience any problems with the web control panel, use a modern, standards-compliant web browser such as Google Chrome or Mozilla Firefox, and make sure JavaScript is enabled.</p>
+    			</div>
+    		</div>
     	</div>
 	</noscript>
-	<div class="container">
+	<div class="container badbrowsermsg" style="display:none;">
+		<div class="badbrowserinner">
+			<div class="col-lg-12">
+				<div class="col-lg-12">
+    				<h1>Sorry!</h1>
+    				<p>Your web browser is not supported by the control panel. To ensure that you do not experience any problems with the web control panel, use a modern, standards-compliant web browser such as Google Chrome or Mozilla Firefox, and make sure JavaScript is enabled.</p>
+    			</div>
+    		</div>
+    	</div>
+	</div>
+	<div class="container main">
 		<div class="navbar" style="background:#f7f7f7 !important">
 			<a class="navbar-brand" href="#">THSCS 2013</a>
 			<ul class="nav navbar-nav">
