Created /submit, made a fancier upload form. Updated UI.

--- a/views/home.html
+++ b/views/home.html
@@ -30,9 +30,9 @@
 		<div class="navbar" style="background:#f7f7f7 !important">
 			<a class="navbar-brand" href="#">THSCS 2013</a>
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="#">Home</a></li>
-				<li><a href="#">Submit</a></li>
-				<li><a href="#">Scoreboard</a></li>
+				<li class="active"><a href="/">Home</a></li>
+				<li><a href="/submit">Submit</a></li>
+				<li><a href="/scoreboard">Scoreboard</a></li>
 			</ul>
 		</div>
 		<div class="row">
