--- a/views/assets/css/app.css
+++ b/views/assets/css/app.css
@@ -32,6 +32,26 @@ textarea:focus, select:focus, input[type="text"]:focus, input[type="password"]:f
 	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 2px rgba(82,168,236,1) !important;
 	box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 2px rgba(82,168,236,1) !important;
 }
+h4 .success {
+	color:green;
+}
+h4 .fail {
+	color:red;
+}
+.submission {
+	cursor:pointer;
+}
+.noselect {
+	-moz-user-select: -moz-none;
+   	-khtml-user-select: none;
+   	-webkit-user-select: none;
+   	-o-user-select: none;
+   	user-select: none;
+}
+#real_file:focus {
+	box-shadow:none !important;
+	border: 1px solid rgb(204, 204, 204) !important;
+}
 #preview_problems td {
  border:1px solid rgba(0,0,0,0.15) !important;
 }
