--- a/views/js.html
+++ b/views/js.html
@@ -2,5 +2,5 @@
 <!-- <div style="margin:0 auto;width:960px;text-align:center;color:rgba(0,0,0,0.5);font-size:11px"><a href="https://github.com/anst/thscs-panel" style="color:rgba(0,0,0,0.5);text-decoration:none">Created by Andy Sturzu. Contributions by Chufan Liang &amp; Jonathan Zong.</a></div>-->
 <script src="http://code.jquery.com/jquery-2.0.3.min.js" type="text/javascript"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script>
-<script src="http://twitter.github.io/bootstrap/assets/js/google-code-prettify/prettify.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.js"></script>
 <script src="/views/assets/js/app.js"></script>
