--- a/views/submit.html
+++ b/views/submit.html
@@ -10,8 +10,7 @@
     	<div class="container noscriptmsg">
     		<div class="noscriptinner">
     			<div class="col-lg-12">
-    				<h1>Sorry!</h1>
-    				<p>Either your web brower does not have JavaScript turned on or your web browser does not support JavaScript. To ensure that you do not experience any problems with the web control panel, use a modern, standards-compliant web browser such as Google Chrome or Mozilla Firefox, and make sure JavaScript is enabled.</p>
+    				<?php require_once "nojs.html";?>
     			</div>
     		</div>
     	</div>
@@ -20,8 +19,7 @@
 		<div class="badbrowserinner">
 			<div class="col-lg-12">
 				<div class="col-lg-12">
-    				<h1>Sorry!</h1>
-    				<p>Your web browser is not supported by the control panel. To ensure that you do not experience any problems with the web control panel, use a modern, standards-compliant web browser such as Google Chrome or Mozilla Firefox, and make sure JavaScript is enabled.</p>
+					<?php require_once "nojs.html";?>
     			</div>
     		</div>
     	</div>
