--- a/views/login.html
+++ b/views/login.html
@@ -55,7 +55,13 @@
 			<div class="col-lg-6" style="">
 				<div class="well section" style="">
 					<legend>Register</legend>
-					<form method="post" action="/api/register" accept-charset="utf-8">
+					<div class="alert alert-danger alert" id="register_error_msg" style="display:none;">
+					</div>
+					<div class="alert alert-success" id="register_success_msg" style="display:none;">
+						<h4>Congrats!</h4>
+						You're registered! Go ahead and log in on your left.
+					</div>
+					<form id="register-form" accept-charset="utf-8">
 						<fieldset class="signup-container" >
 							<div class="form-group"><input type="text" name="team" id="register-team" placeholder="Team Number" tabindex="1" class="form-control"></div>
 							<div class="form-group"><input type="password" name="password" id="register-password"placeholder="Password" tabindex="1" class="form-control"></div>
@@ -87,7 +93,7 @@
 							<div class="form-group"><input type="text" name="member2" id="member2" placeholder="Member 2 Name" tabindex="1" class="form-control" style="display:none"></div>
 							<div class="form-group"><input type="text" name="member3" id="member3" placeholder="Member 3 Name" tabindex="1" class="form-control" style="display:none"></div>
 							<div class="form-group"><legend></legend></div>
-							<button type="submit" class="btn btn-block btn-success" id="sign" tabindex="5" style="height:40px;" data-loading-text="Signing Up...">Sign Up</button>
+							<button class="btn btn-block btn-success" id="reg" tabindex="5" style="height:40px;" data-loading-text="Signing Up...">Sign Up</button>
 						</fieldset>
 					</form>
 				</div>	
