--- a/views/submit.html
+++ b/views/submit.html
@@ -32,6 +32,7 @@
 				<li class="active"><a href="/submit">Submit</a></li>
 				<li><a href="/scoreboard">Scoreboard</a></li>
 			</ul>
+			<p class="navbar-text pull-right"><a href="/logout" style="text-decoration: none" class="navbar-link">Logout</a></p>
 		</div>
 		<div class="row">
 			<div class="col-lg-12" style="">
